<resources>
    <string name="sharedUserId" />
    <string name="process" />
    <string name="application_name">Hyperion Home</string>
    <string name="uid_name">Android core applications</string>
    <string name="folder_name">Folder</string>
    <string name="chooser_wallpaper">Select wallpaper</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Hyperion Wallpapers</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="configure_wallpaper">Configuring...</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="add_items_title">Add items to Screen</string>
    <string name="group_applications">Application</string>
    <string name="group_shortcuts">Shortcut</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folders</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpaper</string>
    <string name="group_qihoo_widget">Hyperion Widget</string>
    <string name="add_folder">Folder</string>
    <string name="add_clock">Clock</string>
    <string name="add_photo_frame">Picture frame</string>
    <string name="out_of_space">No more room on this screen.</string>
    <string name="shortcut_installed">Shortcut \"%s\" is created.</string>
    <string name="shortcut_uninstalled">Shortcut \"%s\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"%s\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_application">Select application</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="all_apps_button_label">All applications</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_screens">Screens</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_launcher_settings">Preferences</string>
    <string name="menu_manage_apps">Applications</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_gestures">Gestures</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sort_apps">Sorting</string>
    <string name="menu_new_folder">New folder</string>
    <string name="menu_hide_apps">Hide app</string>
    <string name="menu_drawer_settings">Settings</string>
    <string name="permlab_install_shortcut">Quick Install</string>
    <string name="permdesc_install_shortcut">"Allow apps to add shortcut on it's own."</string>
    <string name="permlab_uninstall_shortcut">Uninstall</string>
    <string name="permdesc_uninstall_shortcut">"Allow apps to remove shortcuts on it's own."</string>
    <string name="permlab_read_settings">"Read home screen's setting and shortcut"</string>
    <string name="permdesc_read_settings">"Allow Apps to to read home screen's setting and shortcut."</string>
    <string name="permlab_write_settings">"Entering home screen's setting and shortcuts."</string>
    <string name="permdesc_write_settings">"Allow Apps to change home sreen's setting and shortcuts."</string>
    <string name="gadget_error_text">Error when loading windows</string>
    <string name="share_pic_add_dialog_btn_txt">Show your desktop</string>
    <string name="share_pic_title">Show your desktop</string>
    <string name="share_pic_text">"Show my desktop screen, Cool right? I'm using #Hyperion ROM#, just try it. Download address:%s"</string>
    <string name="share_pic_saved_msg">Save image to sdcard/dcim/camera.</string>
    <string name="share_pic_no_sdcard">SD not exist</string>
    <string name="share_pic_share_btn">Share</string>
    <string name="share_pic_note">Current screen</string>
    <string name="share_pic_not_support_msg">Sorry, Live Wallpaper is not supported.</string>
    <string name="time_am">AM</string>
    <string name="time_pm">AM</string>
    <string name="feedback_name">Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_send">Send</string>
    <string name="feedback_sending">Sending...</string>
    <string name="feedback_tip">Please leave your feedback, we will improve...</string>
    <string name="feedback_contact_tip">"Options
Contact Info:GMail,Facebook"</string>
    <string name="feedback_not_be_empty">Please write your feedback. Feedback slot cannot be blanked.</string>
    <string name="feedback_msg_thanks">Thanks!</string>
    <string name="feedback_msg_network_disconnected">Connection fail, please check if you are connected</string>
    <string name="feedback_msg_send_failed">Unable to accept your request,Please try again later.</string>
    <string name="ad_clockweather_name">Clock Weather</string>
    <string name="ad_clockweather_download_title">Download Widget</string>
    <string name="ad_clockweather_download_msg">Clock/weather widget can view real-time weather, living index, the Lunar calender and support multi-city weather query. Download clock/weather widget now?</string>
    <string name="ad_clockweather_download_btn">Download</string>
    <string name="ad_clockweather_install_title">Install Widget</string>
    <string name="ad_clockweather_install_msg">Clock/weather widget can view real-time weather, living index, the Lunar calender and support multi-city weather query. Install clock/weather widget now?</string>
    <string name="ad_clockweather_install_btn">Install</string>
    <string name="taskmanager_name">RAM Cleaner</string>
    <string name="taskmanager_cleanup_complete">RAM Cleaner has free up %1$s M of space</string>
    <string name="taskmanager_cleanup_nonprocess">No more to clean</string>
    <string name="taskmanager_free_memory">RAM Cleaner</string>
    <string name="settings_widget">Widget Settings</string>
    <string name="settings_widget_taskmanager">RAM Cleaner</string>
    <string name="settings_widget_taskmanager_white_list">Apps to ignore while running RAM Cleaner</string>
    <string name="taskmanager_white_list_title">Apps to ignore while running RAM Cleaner</string>
    <string name="taskmanager_kill_degree_title">Clean Strength</string>
    <string name="taskmanager_kill_degree_summary">Clean Strength Setting</string>
    <string name="taskmanager_kill_degree_cruel">Strong Mode</string>
    <string name="taskmanager_kill_degree_soft">Normal Mode</string>
    <string name="taskmanager_view_error_text">Error when loading</string>
    <string name="download_theme_taskmanager_skin">Download RAM Cleaner skin</string>
    <string name="powermanager_name">Power Manager</string>
    <string name="powermanager_optimize_name">One Click Save</string>
    <string name="powermanager_optimize_has_killed_result_message1">Power Manager has closed %1$s background app to save more energy</string>
    <string name="powermanager_optimize_has_killed_result_message2">Power Manager has closed %1$s background app battery life has been improved by %2$s minutes</string>
    <string name="powermanager_optimize_no_killed_result_message">Battery Status Optimised</string>
    <string name="powermanager_mode_unset">Mode Off</string>
    <string name="powermanager_mode_custom_name">Custom Mode</string>
    <string name="powermanager_mode_normal_name">Best Mode</string>
    <string name="powermanager_mode_normal_description">Turning on basic service</string>
    <string name="powermanager_mode_medium_name">Longest Mode</string>
    <string name="powermanager_mode_medium_description">Turning on basic service excluding network</string>
    <string name="powermanager_mode_longest_name">Extreme Mode</string>
    <string name="powermanager_mode_longest_description">Disable all devices</string>
    <string name="powermanager_mode_more_name">More Options</string>
    <string name="powermanager_mode_more_description">Please download Mobile Guards</string>
    <string name="powermanager_mode_select_title">Select mode</string>
    <string name="powermanager_mode_applying_title">applying</string>
    <string name="switcher_screen_lock_preference_title">Delete one key lock screen</string>
    <string name="switcher_screen_lock_preference_summary">Remove device administrator access before uninstall</string>
    <string name="global_save">Save</string>
    <string name="settings_home_migrate">Desktop Mover</string>
    <string name="settings_home_layout">Desktop Layout size</string>
    <string name="settings_drawer_apps">Apps Settings</string>
    <string name="settings_drawer_tabs">Tab Settings</string>
    <string name="settings_drawer_apps_transformation_type">Apps Transition Effect</string>
    <string name="drawer_apps_view_type">Apps View Type</string>
    <string name="settings_drawer_layout">Apps Layout size</string>
    <string name="settings_home_screen">Desktop Settings</string>
    <string name="settings_backup">Backup/Restore</string>
    <string name="settings_backup_start">Backup</string>
    <string name="settings_backup_restore">Restore</string>
    <string name="settings_backup_backup_tip">Include desktop layout, wallpaper settings</string>
    <string name="settings_backup_restore_tip">Restoring last backup...</string>
    <string name="settings_launcher_exit">Exit Hyperion Home</string>
    <string name="settings_screenlock_set">Screen Lock Settings</string>
    <string name="settings_screenlock">Screen Lock (Beta)</string>
    <string name="settings_screenlock_tip">Do not support on some phones</string>
    <string name="settings_screenlock_choose">More Screen Locks</string>
    <string name="settings_drawer_shown_tabs">File Category Tabs</string>
    <string name="settings_icon_size_type">Icon Size</string>
    <string name="pref_screen_orientation_title">Screen Orientation</string>
    <string name="pref_screen_transformation_type_title">Screen Transition Effect</string>
    <string name="settings_version_update">Check for updates</string>
    <string name="pref_loop_screen_title">Screen scroll loop</string>
    <string name="pref_loop_screen_summary">When the last screen meets the first</string>
    <string name="pref_lock_home_screen_title">Lock Desktop</string>
    <string name="pref_lock_home_screen_summary">Lock long-click operation to avoid layout changes</string>
    <string name="pref_wallpaper_type_title">Wallpaper Display</string>
    <string name="settings_screenlock_password_enable">Screen lock with password</string>
    <string name="settings_screenlock_screenlock_tip">Password can be used to every unlock the lockscreen</string>
    <string name="settings_screenlock_password_setting">Change unlock password</string>
    <string name="user_folder_name_label">Folder Name:</string>
    <string name="user_folder_default_name">Folder</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="default_folder_name_game">Games</string>
    <string name="default_folder_name_tools">Tools</string>
    <string name="default_folder_name_sns">Social</string>
    <string name="default_folder_name_entertainment">Entertainment</string>
    <string name="taskmanager_preference_title">Whitelist setting</string>
    <string name="shortcut_dialer">Phone</string>
    <string name="shortcut_contacts">Contacts</string>
    <string name="shortcut_sms">Messages</string>
    <string name="shortcut_browser">Internet</string>
    <string name="default_app_title">Default apps Settings</string>
    <string name="drawer_tab_navigation_type">Labels Arrangement</string>
    <string name="settings_about_info">About</string>
</resources>