<?xml version="1.0" encoding="utf-8"?>
<com.carldeancatabay.launcher.view.LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.carldeancatabay.launcher.view.LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip">
        <TextView android:textSize="18.0sp" android:id="@id/user_folder_name_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:text="@string/user_folder_name_label" />
        <EditText android:textSize="17.0sp" android:textColorHighlight="#ffcccccc" android:id="@id/user_folder_name" android:background="@drawable/edit_text_bg" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_folder_default_name" android:singleLine="true" />
    </com.carldeancatabay.launcher.view.LinearLayout>
    <ListView android:id="@id/list" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:fastScrollEnabled="true" />
    <com.carldeancatabay.launcher.view.LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip">
        <Button android:gravity="center" android:id="@id/ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" />
        <Button android:gravity="center" android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
    </com.carldeancatabay.launcher.view.LinearLayout>
</com.carldeancatabay.launcher.view.LinearLayout>