<?xml version="1.0" encoding="utf-8"?>
<com.carldeancatabay.launcher.view.RelativeLayout android:gravity="center_horizontal" android:id="@id/dialog_add_items_main" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.carldeancatabay.launcher.view.LinearLayout android:orientation="vertical" android:id="@id/container" android:background="@drawable/dialog_add_items_top_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="12.0dip">
        <TextView android:textSize="18.0dip" android:textColor="@color/dialog_text_title" android:gravity="left|center" android:id="@id/add_items_txt" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="10.0dip" android:text="@string/add_items_title" />
        <com.carldeancatabay.launcher.view.LinearLayout android:orientation="vertical" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="8.0dip">
            <com.carldeancatabay.launcher.view.LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="@color/add_item_dialog_txt_black" android:gravity="bottom|center" android:id="@id/add_apps" android:background="@drawable/menu_item_background" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_applications" android:drawableTop="@drawable/ic_launcher_add_app" android:drawablePadding="1.0dip" android:layout_weight="1.0" />
                <TextView android:textSize="14.0sp" android:textColor="@color/add_item_dialog_txt_black" android:gravity="bottom|center" android:id="@id/add_shortcut" android:background="@drawable/menu_item_background" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_shortcuts" android:drawableTop="@drawable/ic_launcher_add_shortcut" android:drawablePadding="1.0dip" android:layout_weight="1.0" />
                <TextView android:textSize="14.0sp" android:textColor="@color/add_item_dialog_txt_black" android:gravity="bottom|center" android:id="@id/add_folder" android:background="@drawable/menu_item_background" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/add_folder" android:drawableTop="@drawable/ic_launcher_add_folder" android:drawablePadding="1.0dip" android:layout_weight="1.0" />
            </com.carldeancatabay.launcher.view.LinearLayout>
            <com.carldeancatabay.launcher.view.LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="@color/add_item_dialog_txt_black" android:gravity="bottom|center" android:id="@id/add_wallpaper" android:background="@drawable/menu_item_background" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_wallpapers" android:drawableTop="@drawable/ic_launcher_add_wallpaper" android:drawablePadding="1.0dip" android:layout_weight="1.0" />
                <TextView android:textSize="14.0sp" android:textColor="@color/add_item_dialog_txt_black" android:gravity="bottom|center" android:id="@id/add_widget" android:background="@drawable/menu_item_background" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_widgets" android:drawableTop="@drawable/ic_launcher_add_widget" android:drawablePadding="1.0dip" android:layout_weight="1.0" />
                <TextView android:textSize="14.0sp" android:textColor="@color/add_item_dialog_txt_black" android:gravity="bottom|center" android:id="@id/add_qihoo_widget" android:background="@drawable/menu_item_background" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_qihoo_widget" android:drawableTop="@drawable/ic_launcher_add_qihoo_widget" android:drawablePadding="1.0dip" android:layout_weight="1.0" />
            </com.carldeancatabay.launcher.view.LinearLayout>
        </com.carldeancatabay.launcher.view.LinearLayout>
    </com.carldeancatabay.launcher.view.LinearLayout>
    <View android:background="@drawable/dialog_add_items_bottom_bg" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_below="@id/container" />
    <ImageView android:id="@id/share_pic_add_dialog_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/dialog_add_show_screen" android:layout_below="@id/container" android:layout_centerHorizontal="true" />
</com.carldeancatabay.launcher.view.RelativeLayout>